Complete laboratory work 1